2004-10-22 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/ser_ir_cts_rts.c: integer promotion caused a call to the
	non-reentrant function __modsint in the interrupt function (thus 
	corrupting math operations during serial I/O)
	* device/lib/ser_ir.c: as above, changed buffersize 
	* src/mcs51/peeph.def: added 259.a,b for removing redundant ret,
	256.c,d for zeroing
	* doc/Makefile: added option -t for rsync

2004-10-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.h (struct ast),
	* src/SDCCast.c (reverseParms, copyAst): fixed bug #1040577

2004-10-20 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added include/pic16/*.h to the setup
	package

2004-10-20 Vangelis Rokas <vrokas AT otenet.gr>

	* device/lib/pic16/libsdcc/Makefile: added lregs directory in
	makefile targets,
	* device/lib/pic16/libsdcc/lregs/{Makefile,lrst.c,lrrest.c}: NEW
	support functions to replace long sequences of MOVFF's from access
	bank registers to stack and vice versa,
	* src/pic16/device.h: added new field opt_flags, where optimization
	flags can be set to enable certain features,
	* src/pic16/gen.c (pic16_emitpinfo): NEW to add PC_INFO pCode in
	* pBlock, (genFunction, genEndFunction): surroung loop for
	saving/loading used registers in stack with PC_INFO pCodes,
	INF_LREGS. Code in between can then be optimized by pCode optimizer
	to support function calls,
	* (genDataPointerSet): fixed bug which loaded float fields in
	structures with corrupt data,
	* src/pic16/genutils.c (debugf, _debugf): macro/function which emits
	in a standard way debug info on stderr. Feature used for developing
	and debugging only,
	* src/pic16/glue.c (pic16glue): reformatted, deleted some old and
	obsolete chunks of code,
	* if optimization flag OF_LR_SUPPORT was set, call pic16_OptimizeLocalRegs,
	* src/pic16/main.c (_pic16_parseOptions): added handler for --flr-support,
	* pic16/src/pcode.c (pic16_newpCodeInfo,
	* (pic16_newpCodeOpLocalRegs),